# serialise

./: .gitignore  README.md  pyproject.toml
serialise/: __init__.py  example.py  file.py  save.py  sqlite.py
tests/: file.py  test_utils.py
