# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "serialise"
version = "0.0.7"
description = "Save down data to a serialised format, for later reuse"
readme = "README.md"
authors = [{ name = "Tyler Hofmeister", email = "tyler.hofmeister@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["serialise"]
dependencies = [
    'tomli; python_version < "3.10"'
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/tylerhof/serialise"

#Note: to build, update version, then in base terminal run:
# python3 -m build --sdist --wheel .
#
#Note: to release, in venv run:
# twine upload -r testpypi dist/*
#
# Note to install in another project run:
# pip install --upgrade --index-url https://test.pypi.org/simple/ serialise